<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<PreferenceCategory
		android:layout="@layout/banner_memek"/>

    <PreferenceCategory
        android:layout="@layout/nfs" />

	<PreferenceCategory
		android:title="@string/audio_category">

		<com.needforspeed.parts.preferences.SecureSettingSwitchPreference
			android:defaultValue="true"
			android:key="dirac_enabled"
			android:layout="@layout/card_top"
			android:summary="@string/dirac_summary"
			android:title="@string/dirac_title"
			android:icon="@drawable/ic_dirac"/>

		<mobx.projects.property.minimalist.space/>

		<com.needforspeed.parts.preferences.SecureSettingListPreference
			android:defaultValue="0"
			android:layout="@layout/card_middle"
			android:dependency="dirac_enabled"
			android:entries="@array/dirac_headset_pref_entries"
			android:entryValues="@array/dirac_headset_pref_values"
			android:key="dirac_headset_pref"
			android:summary="%s"
			android:title="@string/dirac_headset_title"
			android:icon="@drawable/ic_headphones"/>

		<mobx.projects.property.minimalist.space/>

		<com.needforspeed.parts.preferences.SecureSettingListPreference
			android:defaultValue="0,0,0,0,0,0,0"
			android:layout="@layout/card_bottom"
			android:dependency="dirac_enabled"
			android:entries="@array/dirac_preset_pref_entries"
			android:entryValues="@array/dirac_preset_pref_values"
			android:key="dirac_preset_pref"
			android:summary="%s"
			android:title="@string/dirac_preset_title"
			android:icon="@drawable/ic_preset"/>

	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/display_category">

		<SwitchPreference
			android:layout="@layout/card_top"
			android:key="fps_info"
			android:icon="@drawable/ic_fps_info"
			android:title="@string/fps_info_title"
			android:summary="@string/fps_info_summary"
			android:persistent="true"/>

		<mobx.projects.property.minimalist.space/>

		<Preference
			android:key="device_kcal"
			android:layout="@layout/card_middle"
			android:persistent="false"
			android:icon="@drawable/ic_kcal"
			android:title="@string/device_kcal_title"
			android:summary="@string/device_kcal_summary">

			<intent
				android:action="android.intent.action.MAIN"
				android:targetClass="com.needforspeed.parts.kcal.KCalSettingsActivity"
				android:targetPackage="com.needforspeed.parts.kcal"/>

		</Preference>

		<mobx.projects.property.minimalist.space/>

		<PreferenceScreen
			android:key="ambient_display_gestures"
			android:layout="@layout/card_bottom"
			android:fragment="com.needforspeed.parts.ambient.AmbientGesturePreferenceActivity"
			android:summary="@string/ambient_display_gestures_summary"
			android:icon="@drawable/ic_doze"
			android:title="@string/ambient_display_gestures_title"/>

	</PreferenceCategory>
	
	<PreferenceCategory
		android:title="@string/vibration_category">

		<com.needforspeed.parts.preferences.SecureSettingSwitchPreference
			android:key="vmax_override"
			android:layout="@layout/card_top"
			android:icon="@drawable/ic_vibrate_override"
			android:title="@string/vibration_override_title"
			android:visibility="gone"
			android:persistent="false"/>

		<mobx.projects.property.minimalist.space/>

		<com.needforspeed.parts.preferences.VibrationSeekBarPreferenceMiddle
			android:defaultValue="60"
			android:key="vibration_system"
			android:max="100"
			android:title="@string/vibration_system_title"
			android:icon="@drawable/ic_vibrate"
			app:min="1"
			app:units="%"/>

		<mobx.projects.property.minimalist.space/>

		<com.needforspeed.parts.preferences.VibrationSeekBarPreferenceMiddle
			android:defaultValue="60"
			android:key="vibration_notification"
			android:max="100"
			android:title="@string/vibration_notification_title"
			android:icon="@drawable/ic_vibrate_notif"
			app:min="1"
			app:units="%"/>

		<mobx.projects.property.minimalist.space/>

		<com.needforspeed.parts.preferences.VibrationSeekBarPreferenceBottom
			android:defaultValue="60"
			android:key="vibration_call"
			android:max="100"
			android:title="@string/vibration_call_title"
			android:icon="@drawable/ic_vibrate_call"
			app:min="1"
			app:units="%"/>

	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/other_category">
		
		<Preference
            android:key="clear_speaker_settings" 
            android:layout="@layout/card_top"
            android:title="@string/clear_speaker_title"
            android:icon="@drawable/ic_speaker_cleaner_icon" >
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="com.needforspeed.parts.speaker.ClearSpeakerActivity"
                android:targetPackage="com.needforspeed.parts.speaker" />
        </Preference>
		
		<com.needforspeed.parts.preferences.SecureSettingListPreference
            android:defaultValue="0"
            android:layout="@layout/card_middle"
            android:dialogTitle="@string/spectrum_dialogTitle"
            android:entries="@array/spectrum_profiles"
            android:entryValues="@array/spectrum_values"
            android:key="spectrum"
            android:summary="@string/spectrum_summary"
            android:icon="@drawable/ic_spectrum" 
            android:title="@string/spectrum_title" />

        <com.needforspeed.parts.preferences.SecureSettingListPreference
            android:summary="@string/camera_explanation_summary"
            android:key="camera"
            android:layout="@layout/card_middle"
            android:title="@string/camera_title"
            android:summaryOn="@string/camera_hal3_summary"
            android:summaryOff="@string/camera_hal1_summary"
            android:icon="@drawable/ic_cam"
            android:defaultValue="0"
            android:dialogTitle="@string/camera_dialogTitle"
            android:entries="@array/camera_profiles"
            android:entryValues="@array/camera_values" />
            
		<com.needforspeed.parts.preferences.SecureSettingSwitchPreference
			android:defaultValue="true"
			android:key="set_on_boot"
			android:layout="@layout/card_middle"
			android:title="@string/set_on_boot"
			android:icon="@drawable/ic_boot"
			android:summary="@string/set_on_boot_summary"/>

		<mobx.projects.property.minimalist.space/>

		<SwitchPreference
			android:key="fastcharge"
			android:layout="@layout/card_bottom"
			android:defaultValue="true"
            android:title="@string/fastcharge_title"
            android:icon="@drawable/ic_usb_fastcharge"
            android:summary="@string/fastcharge_summary" />

	</PreferenceCategory>

	<PreferenceCategory
		android:key="selinux"
		android:title="@string/selinux_category">

		<Preference
			android:key="selinux_explanation"
			android:layout="@layout/card_top"
			android:summary="@string/selinux_explanation_summary"
			android:selectable="false"/>

		<mobx.projects.property.minimalist.space/>

		<SwitchPreference
			android:key="selinux_mode"
			android:layout="@layout/card_middle"
			android:icon="@drawable/ic_selinux"
			android:title="@string/selinux_mode_title"
			android:summaryOn="@string/selinux_enforcing_summary"
			android:summaryOff="@string/selinux_permissive_summary"
			android:selectable="true"/>

		<mobx.projects.property.minimalist.space/>

		<SwitchPreference
			android:key="selinux_persistence"
			android:layout="@layout/card_bottom"
			android:icon="@drawable/ic_selinux_persistence"
			android:title="@string/selinux_persistence_title"
			android:summary="@string/selinux_persistence_summary"
			android:defaultValue="true"
			android:selectable="true"/>

	</PreferenceCategory>
	
	<PreferenceCategory
        android:title="@string/nfs_maintainer">

        <PreferenceScreen
            android:icon="@drawable/ic_style_maintainer"
            android:layout="@layout/card_single"
            android:title="@string/nfs_title"
            android:selectable="true"
            android:summary="@string/nfs_summary">
            <intent
                android:targetPackage="com.needforspeed.parts"
                android:action="android.intent.action.MAIN"
                android:targetClass="com.needforspeed.parts.rosy.AboutPhoneActivity" />
        </PreferenceScreen>
        
    </PreferenceCategory>

</PreferenceScreen>

