<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:gravity="center"
        android:paddingTop="0.0dip"
        android:paddingBottom="0.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0.0dip"
        android:paddingStart="0.0dip">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_marginLeft="15.099976dip"
            android:layout_marginTop="5.0dip"
            android:layout_marginRight="0.0dip"
            android:layout_marginBottom="0.0dip"
            android:layout_weight="1.0"
            android:paddingStart="0.0dip">
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:background="@drawable/mobx_preference_single_item_bg"
                android:foreground="?android:selectableItemBackground"
                android:layout_width="fill_parent"
                android:layout_height="94.0dip"
                android:layout_marginTop="0.0dip"
                android:layout_marginBottom="0.0dip"
                android:layout_marginEnd="3.0dip">
                <ImageView
                    android:paddingTop="5.0dip"
                    android:paddingBottom="8.0dip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_style_device" />
                <TextView
                    android:textSize="12.0dip"
                    android:textColor="@*android:color/text_color_primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/style_version_device" />
                <TextView
                    android:textSize="16.0dip"
                    android:textColor="@*android:color/text_color_secondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/style_device_name_text" />
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:background="@drawable/mobx_preference_single_item_bg"
                android:foreground="?android:selectableItemBackground"
                android:layout_width="fill_parent"
                android:layout_height="94.0dip"
                android:layout_marginTop="6.0dip"
                android:layout_marginBottom="0.0dip"
                android:layout_marginEnd="3.0dip">
                <ImageView
                    android:paddingTop="5.0dip"
                    android:paddingBottom="8.0dip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_style_cpu" />
                <TextView
                    android:textSize="12.0dip"
                    android:textColor="@*android:color/text_color_primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/style_version_cpu" />
                <TextView
                    android:textSize="16.0dip"
                    android:textColor="@*android:color/text_color_secondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/style_device_cpu_text" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_marginLeft="0.0dip"
            android:layout_marginTop="5.0dip"
            android:layout_marginRight="15.099976dip"
            android:layout_marginBottom="0.0dip"
            android:layout_weight="1.0"
            android:paddingStart="0.0dip">
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:background="@drawable/mobx_preference_single_item_bg"
                android:foreground="?android:selectableItemBackground"
                android:layout_width="fill_parent"
                android:layout_height="94.0dip"
                android:layout_marginTop="0.0dip"
                android:layout_marginBottom="0.0dip"
                android:layout_marginStart="3.0dip">
                <ImageView
                    android:paddingTop="5.0dip"
                    android:paddingBottom="8.0dip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_style_maintainer" />
                <TextView
                    android:textSize="12.0dip"
                    android:textColor="@*android:color/text_color_primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/style_version_maintainer" />
                <TextView
                    android:textSize="16.0dip"
                    android:textColor="@*android:color/text_color_secondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/style_device_maintainer_text" />
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:background="@drawable/mobx_preference_single_item_bg"
                android:foreground="?android:selectableItemBackground"
                android:layout_width="fill_parent"
                android:layout_height="94.0dip"
                android:layout_marginTop="6.0dip"
                android:layout_marginBottom="0.0dip"
                android:layout_marginStart="3.0dip">
                <ImageView
                    android:paddingTop="5.0dip"
                    android:paddingBottom="8.0dip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_style_battery" />
                <TextView
                    android:textSize="12.0dip"
                    android:textColor="@*android:color/text_color_primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/style_version_battery" />
                <TextView
                    android:textSize="16.0dip"
                    android:textColor="@*android:color/text_color_secondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/style_device_battery_text" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>